fix: single page too wide problem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
     font-size: clamp(14px, calc(15px + 0.35vw), 22px);
     --blue: #0A94C8;
     --lighter-blue: #addbec;
+    --lightest-blue: #f2f9fc;
     --yellow: #FFB603;
     --red: #FF2F03;
     --dark: #233044;
@@ -49,10 +50,8 @@ table {
   font-family: var(--body);
 }
 thead {
-  background-color: whitesmoke;
-  border-bottom-color: var(--dark);
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
+  background-color: var(--lightest-blue);
+  border-bottom: 3px solid var(--lighter-blue);
 }
 table th, table td {
   padding-right: 40px;
@@ -67,11 +66,20 @@ table td {
 
 blockquote {
   font-family: var(--body);
-  padding: 10px 10px 1px 30px;
-  background-color: ghostwhite;
-  border-left-width: 5px;
-  border-left-color: lightgray;
+  padding: 10px 10px 1px 20px;
+  background-color: var(--lightest-blue);
+  border-left-width: 3px;
+  border-left-color: var(--lighter-blue);
   border-left-style: solid;
+}
+
+.body-text blockquote {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.body-text blockquote p:last-child {
+  margin-bottom: 0;
 }
 
 code {
@@ -82,6 +90,7 @@ code {
 .body-text {
   font-family: var(--body);
   color: var(--grey);
+  line-height: 1.8;
 }
 
 /********************* Page Layout *********************/
@@ -384,6 +393,7 @@ code {
   margin-top: 0.5rem;
   overflow-wrap: break-word;
   word-break: break-word;
+  overflow-x: hidden;
 }
 
 .main-content h1,
